<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background"
    android:scrollbars="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/tab_bar_bg"
        >

        <Button
            android:id="@+id/shop_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/light_btn_selector"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="10dip"
            android:text="@string/shop_info_text"
            />
        <Button
            android:id="@+id/shop_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/light_btn_selector"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:text="@string/shop_comment_text"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/name_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="shop name"
            android:textSize="20dip"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="@dimen/marginTop_dimen_spacing"
            />

        <TextView
            android:id="@+id/average_percent_a"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_dimen_spacing"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/name_a"
            android:layout_marginLeft="8dip"
            android:text="percent"
            android:drawableRight="@drawable/divider"
			android:textSize="17dip"
			android:textColor="@color/color_gray_item"
			android:lines="1"
            />



        <TextView
            android:id="@+id/average_count_a"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_dimen_spacing"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/average_percent_a"
            android:layout_below="@id/name_a"
            android:text="count"
            android:textSize="17dip"
            android:textColor="@color/color_gray_item"
            android:lines="1"
            />

        <TextView
            android:id="@+id/price_per_person_a"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_dimen_spacing"
            android:gravity="center_vertical"
            android:layout_below="@id/name_a"
            android:layout_toRightOf="@id/average_count_a"
            android:text="price"
            android:textSize="17dip"
            android:textColor="@color/color_gray_item"
            android:lines="1"
            />

        <TextView
            android:id="@+id/address_a"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/average_percent_a"
            android:layout_marginLeft="8dip"
            android:text="shop adress"
            android:textSize="17dip"
            android:textColor="@color/color_gray_item"
            />

        <TextView
            android:id="@+id/shop_tele_num_a"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_dimen_spacing"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/address_a"
            android:gravity="center_vertical"
            android:text="shop tele num"
            android:textSize="17dip"
            android:textColor="@color/color_gray_item"
            android:layout_marginLeft="8dip"
            android:lines="1"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:layout_marginBottom="4dip"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/tel_btn"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_gravity="fill_vertical"
            android:gravity="center"
            android:layout_marginLeft="10dip"
            android:background="@drawable/button_selector"
            android:layout_weight="1"
            android:textSize="16dip"
            android:textColor="@color/dark_yellow"
            android:text="@string/tel_btn_text"
            />
        <Button
            android:id="@+id/msg_btn"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="10dip"
            android:layout_gravity="fill_vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:textSize="16dip"
            android:textColor="@color/dark_yellow"
            android:text="@string/msg_btn_text"
            />
        <Button
            android:id="@+id/map_btn"
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:gravity="center"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1"
            android:textSize="16dip"
            android:textColor="@color/dark_yellow"
            android:text="@string/map_btn_text"
            android:background="@drawable/button_selector"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/image_num"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="11dip"
        android:background="@drawable/sub_title_bg"
        android:textSize="14dip"
        android:textStyle="bold"
        android:textColor="#ff846b47"
        android:gravity="center_vertical"
        />
    <LinearLayout
        android:id="@+id/image_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:orientation="horizontal"
        android:layout_margin="8dip"
        >
        <ImageView
            android:id="@+id/image1"
            android:layout_width="80dip"
            android:layout_height="60dip"
            android:scaleType="fitXY"
            android:padding="2px"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/image_selector"
            />
        <ImageView
            android:id="@+id/image2"
            android:layout_width="80dip"
            android:layout_height="60dip"
            android:scaleType="fitXY"
            android:padding="2px"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/image_selector"
            />
        <ImageView
            android:id="@+id/image3"
            android:layout_width="80dip"
            android:layout_height="60dip"
            android:scaleType="fitXY"
            android:padding="2px"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/image_selector"
            />
        <Button
            android:id="@+id/more_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/more_button_selector"
            android:layout_marginLeft="6dip"
            android:layout_gravity="bottom"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/group_buy_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        >
        <TextView
            android:id="@+id/group_buy_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="11dip"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:background="@drawable/sub_title_bg"
            android:textSize="14dip"
            android:textStyle="bold"
            android:textColor="#ff845b47"
            android:text="@string/group_buy_title_text"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/coupon_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/coupon_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/coupon_title_text"
            android:textSize="14dip"
            android:textStyle="bold"
            android:textColor="#ff846b47"
            android:paddingLeft="11dip"
            android:layout_alignParentLeft="true"
            android:background="@drawable/sub_title_bg"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/introduce"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sub_title_bg"
        android:textSize="14dip"
        android:textStyle="bold"
        android:textColor="#ff846b47"
        android:gravity="center_vertical"
        android:text="@string/introduce_text"
        android:paddingLeft="11dip"

        />
    <TextView
        android:id="@+id/ext_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ext_info_text"
        android:textSize="14dip"
        android:textStyle="bold"
        android:textColor="#ff846b47"
        android:gravity="center_vertical"
        android:background="@drawable/sub_title_bg"
        android:paddingLeft="11dip"
        />
    <TextView
        android:id="@+id/ext_info_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginTop="8dip"
        android:layout_marginRight="6dip"
        android:layout_marginBottom="8dip"
        android:textSize="17dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:lineSpacingExtra="@dimen/dimen_lines_spacing"
        android:text=""
        />
    <Button
        android:id="@+id/more_ext_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/more_shade_selector"
        android:layout_marginTop="-20dip"
        android:layout_marginRight="8dip"
        android:layout_marginBottom="8dip"
        android:text=""
        android:visibility="visible"
        />
    <TextView
        android:id="@+id/tag_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14dip"
        android:textStyle="bold"
        android:textColor="#ff846b47"
        android:gravity="center_vertical"
        android:paddingLeft="11dip"
        android:text="@string/tag_title_text"
        />
    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:layout_margin="8dip"
        android:minLines="1"
        android:lineSpacingExtra="@dimen/dimen_lines_spacing"
        android:gravity="center_vertical"
        android:textSize="17dip"
        android:textColor="@color/color_gray_item"
        android:text=""
        />
    <TextView
        android:id="@+id/info_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="11dip"
        android:textSize="14dip"
        android:textStyle="bold"
        android:textColor="#ff846b47"
        android:gravity="center_vertical"
        android:background="@drawable/sub_title_bg"
        android:text="@string/info_title_text"
        />
    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:layout_margin="8dip"
        android:minLines="1"
        android:lineSpacingExtra="@dimen/dimen_lines_spacing"
        android:gravity="center_vertical"
        android:textSize="17dip"
        android:textColor="@color/color_gray_item"
        android:text=""
        />
    <Button
        android:id="@+id/morecoupon_titlecoupon_title_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/more_shade_selector"
        android:layout_marginTop="-20dip"
        android:layout_marginRight="8dip"
        android:layout_marginBottom="8dip"
        android:text=""
        android:visibility="visible"
        />

</LinearLayout>
</ScrollView>