<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  	xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/shop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="6.0dip"
        android:layout_alignParentLeft="true">
        <TextView
            android:textSize="20.0dip"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:id="@id/shopName"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="4.0dip"
            android:text=""
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:layout_weight="1.0"
            android:marqueeRepeatLimit="marquee_forever" />
        <Button
            android:id="@+id/tele_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_dimen_spacing"
            android:text="82789550,222"
            android:background="@drawable/login_button_selector"
            android:layout_margin="5dip"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            android:focusable="false"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textStyle="bold"
            android:textColor="@color/color_orange"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:shadowColor="#111111"
            android:drawablePadding="8dip"
            />
        <ImageView
            android:layout_gravity="right|center"
            android:id="@+id/cardIcon"
            android:visibility="gone"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginLeft="5.0dip" />
        <ImageView
            android:layout_gravity="right|center"
            android:id="@+id/ticketIcon"
            android:visibility="gone"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginLeft="5.0dip" />
        <ImageView
            android:layout_gravity="right|center"
            android:id="@+id/groupbuyIcon"
            android:visibility="gone"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginLeft="5.0dip" />
    </LinearLayout>
    <ImageView
        android:layout_gravity="left"
        android:id="@+id/Storepicture"
        android:background="@drawable/picture_outline"
        android:padding="1.0px"
        android:layout_width="100.0dip"
        android:layout_height="80.0dip"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="4.0dip"
        android:layout_marginBottom="5.0dip"
        android:src="@drawable/loading_fail_4_3"
        android:scaleType="fitXY"
        android:layout_below="@id/shop" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/goodCommentCountText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:layout_marginLeft="10.0dip"
        android:text="@string/item_good_comment_count_text"
        android:lines="1"
        android:layout_toRightOf="@id/Storepicture"
        android:layout_below="@id/shop" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="#fffd5800"
        android:gravity="center_vertical"
        android:id="@+id/goodCommentCount"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:text=""
        android:lines="1"
        android:layout_toRightOf="@id/goodCommentCountText"
        android:layout_alignBaseline="@id/goodCommentCountText" />
    <TextView
        android:gravity="center_vertical"
        android:id="@+id/divider0"
        android:background="@drawable/divider"
        android:layout_width="1.0px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_spacing"
        android:layout_marginRight="@dimen/dimen_spacing"
        android:layout_toRightOf="@id/goodCommentCount"
        android:layout_alignBaseline="@id/goodCommentCountText" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/commentCountText"
        android:paddingBottom="@dimen/dimen_spacing"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:lines="1"
        android:layout_toRightOf="@id/divider0"
        android:layout_below="@id/shop"
        android:layout_alignBaseline="@id/goodCommentCountText" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/commentCount"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:text="@string/comment_count_text"
        android:lines="1"
        android:layout_toRightOf="@id/commentCountText"
        android:layout_alignBaseline="@id/goodCommentCountText" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/perPriceText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:text="@string/per_price_text"
        android:lines="1"
        android:layout_toRightOf="@id/Storepicture"
        android:layout_below="@id/goodCommentCountText"
        android:layout_alignLeft="@id/goodCommentCountText" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/perPrice"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:text=""
        android:lines="1"
        android:layout_toRightOf="@id/perPriceText"
        android:layout_below="@id/goodCommentCountText"
        android:layout_alignBaseline="@id/perPriceText" />
    <TextView
        android:gravity="center_vertical"
        android:id="@+id/divider2"
        android:background="@drawable/divider"
        android:layout_width="1.0px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.0dip"
        android:layout_marginRight="8.0dip"
        android:layout_toRightOf="@id/perPrice"
        android:layout_alignBaseline="@id/perPriceText" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:text=""
        android:lines="1"
        android:layout_toRightOf="@id/divider2"
        android:layout_alignBaseline="@id/perPriceText" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/sne"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:text="无位置信息"
        android:lines="1"
        android:visibility="gone"
        android:layout_toRightOf="@id/Storepicture"
        android:layout_below="@id/perPriceText"
        android:layout_alignLeft="@id/goodCommentCountText"
        />
    <TextView
        android:gravity="center_vertical"
        android:id="@+id/divider1"
        android:background="@drawable/divider"
        android:layout_width="1.0px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_spacing"
        android:layout_marginRight="@dimen/dimen_spacing"
        android:layout_toRightOf="@id/sne"
        android:visibility="gone"
        android:layout_alignBaseline="@id/sne" />
    <TextView
        android:textSize="17.0dip"
        android:textColor="@color/color_gray_item"
        android:gravity="center_vertical"
        android:id="@+id/categoryName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_dimen_spacing"
        android:text="海鲜"
        android:singleLine="true"
        android:layout_toRightOf="@id/Storepicture"
        android:layout_below="@id/perPriceText"
        android:layout_alignLeft="@id/goodCommentCountText"
        />
</RelativeLayout>
